--- a/src/theme/theme.less
+++ b/src/theme/theme.less
@@ -39,12 +39,4 @@
   .responsive-block(-l-important) !important;
 }
 
-i.icon.clear-icon { //for allowClear prop in <Selector/> component
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  margin: auto;
-  right: 2.5em;
-  line-height: 1;
-  z-index: 1;
-}
+.grow:active { transform: scale(1.05); }
