--- a/src/theme/theme.less
+++ b/src/theme/theme.less
@@ -1,8 +1,3 @@
-:root {
-  --black:#1B1C1D;
-  --gray: #545454;
-  --dark-red: #9F3A38;
-}
 
 @custom-media --breakpoint-not-small screen and (min-width: 768px);
 @custom-media --breakpoint-medium screen and (min-width: 768px) and (max-width: 1200px);
@@ -21,6 +16,7 @@
   .rm-fill@{suffix} { object-fit: fill; }
   .pe-none@{suffix} { pointer-events: none; }
   .pe-all@{suffix} { pointer-events: all; }
+  .outline@{suffix} { outline: unset; }
 }
 
 .responsive-block();
