--- a/src/controls/range.less
+++ b/src/controls/range.less
@@ -5,7 +5,7 @@
   height: 4px;
 
   .rangeslider__fill {
-    background-color: var(--blue);
+    background-color: #004268;
   }
   .rangeslider__handle {
     width: 30px;
