--- a/src/theme/theme.less
+++ b/src/theme/theme.less
@@ -5,6 +5,7 @@
   .ml-auto@{suffix} { margin-left: auto; }
   .mr-auto@{suffix} { margin-right: auto; }
   .flex@{suffix} { display: flex; }
+  .flex-none@{suffix} { flex: none; }
   .rm-cover@{suffix} { object-fit: cover; }
   .rm-contain@{suffix} { object-fit: contain; }
   .rm-fill@{suffix} { object-fit: fill; }
